add base controller, route, testing, and docs
