# controllers/notification.controller.js
@@ -1,0 +1,7 @@
+const { Notification } = require("../models");
+
+module.exports = {
+  getNotifications: (req, res) => {},
+  updateNotification: (req, res) => {},
+  deleteNotification: (req, res) => {},
+};
