# routes/index.route.js
@@ -5,6 +5,7 @@ const categoryRoutes = require("./category.route");
 const biodataRoutes = require("./biodata.route");
 const wishlistRoutes = require("./wishlist.route");
 const transactionRoutes = require("./transaction.route");
+const notificationRoutes = require("./notification.route");
 
 router.use("/product", productRoutes);
 router.use("/auth", authRoutes);
@@ -12,5 +13,6 @@ router.use("/category", categoryRoutes);
 router.use("/biodata", biodataRoutes);
 router.use("/wishlist", wishlistRoutes);
 router.use("/transaction", transactionRoutes);
+router.use("/notification", notificationRoutes);
 
 module.exports = router;
